# hexchat

./: .gitignore  .gitmodules  ELECTRON_FRONTEND_PLAN.md  GTK4_LISTVIEW_MIGRATION.md  GTK4_MIGRATION_PLAN.md  TRAY_INTEGRATION_PLAN.md  WIN32_MESON_MIGRATION.md  meson.build  meson_options.txt
.github/workflows/: flatpak-build.yml  msys-build.yml  ubuntu-build.yml  windows-build.yml
electron/: electron-builder.json  index.html  package.json  tsconfig.node.json  vite.config.ts
plugins/checksum/: checksum.vcxproj
plugins/exec/: exec.vcxproj
plugins/fishlim/: dh1080.c  fishlim.vcxproj
plugins/lua/: lua.vcxproj
plugins/perl/: meson.build  perl.vcxproj
plugins/python/: python3.vcxproj
plugins/sasl/: sasl-xp.vcxproj  sasl.vcxproj
plugins/sysinfo/: meson.build  sysinfo.vcxproj
plugins/upd/: upd.vcxproj
plugins/winamp/: winamp.vcxproj
src/: meson.build
src/common/: common.vcxproj
src/fe-electron/: fe-electron.c  fe-electron.h  fe-electron.vcxproj  json-protocol.c  meson.build  ws-server.c
src/fe-gtk/: ascii.c  banlist.c  chanlist.c  chanview-tabs.c  chanview-tree.c  chanview.c  chanview.h  custom-list.c  custom-list.h  dccgui.c  editlist.c  fe-gtk.c  fe-gtk.h  fe-gtk.vcxproj  fkeys.c  fkeys.h  gtk-compat.h  gtkutil.c  gtkutil.h  ignoregui.c  joind.c  maingui.c  maingui.h  menu.c  menu.h  meson.build  notifygui.c  palette.c  palette.h  pixmaps.c  pixmaps.h  plugin-tray.c  plugingui.c  rawlog.c  servlistgui.c  setup.c  sexy-spell-entry.c  textgui.c  urlgrab.c  userlistgui.c  (+3 more)
src/fe-text/: fe-text.vcxproj
win32/: hexchat.props  hexchat.sln
(+20 files in other folders)
